Arama ve rezervasyon hatalarını düzelt